2002-01-23  Werner Koch  <wk@gnupg.org>

	* ksba.h (KsbaKeyUsage): New.
	* cert.c (ksba_cert_get_key_usage): New.

	* cert.c (get_name): New, implemented rfc822 AltNames.
	(ksba_cert_get_issuer,ksba_cert_get_subject): Use it.

2002-01-22  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_is_ca): New.

	* ber-help.c (premature_eof): New.
	(eof_or_error): Use it here.
	(_ksba_ber_parse_tl): New.

2002-01-21  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_extension): New.
	(read_extensions): New.
	(ksba_cert_release): Release the cached extension info.

2002-01-14  Werner Koch  <wk@gnupg.org>

	* dn.c: Fixed oid table according to rfc2253.
	(append_atv): Do only use the allowed names.

2002-01-11  Werner Koch  <wk@gnupg.org>

	* dn.c (append_atv): Don't write a trailing hash sign.

	* time.c (_ksba_asntime_to_epoch): Kludge to cope with the Y2038
	problem.

	* crl.c (do_hash): New.  Apply the hashing where needed.

2002-01-10  Werner Koch  <wk@gnupg.org>

	* certreq.c, certreq.h: New.
	* keyinfo.c (_ksba_keyinfo_from_sexp): New.

	* der-encoder.c: Removed commented code.

2002-01-09  Werner Koch  <wk@gnupg.org>

	* dn.c (count_quoted_string, parse_rdn, write_escaped): New.
	(_ksba_dn_from_str): Implemented.

	* ber-help.c (_ksba_ber_count_tl): New.

	* util.h (spacep): New.
	(hexdigitp): Now takes a pointer as arg.
	
	* writer.c (do_writer_write): Set the error flag when we are out
	of core.
	(ksba_writer_snatch_mem): New.

2002-01-08  Werner Koch  <wk@gnupg.org>

	* writer.c (ksba_writer_set_mem): New.
	(do_writer_write): Implemented it here.
	(ksba_writer_get_mem): New.

	* tmttv2.asn (CertificationRequestInfo): Added.

2002-01-07  Werner Koch  <wk@gnupg.org>

	* ksba.h (KsbaCRLReason): New.
	* crl.c: Basically works.

2002-01-05  Werner Koch  <wk@gnupg.org>

	* asn1-func.c (_ksba_asn_find_node): Moved code to ..
	(find_node): new function which allows resolving of identifiers.
	(_ksba_asn_expand_tree): Use the resolving find_node here.
